--- a/app/assets/stylesheets/modules/_user.scss
+++ b/app/assets/stylesheets/modules/_user.scss
@@ -7,7 +7,7 @@
     border: 1px solid #ddd;
     border-radius: 5px;
 
-    &--left, --right {
+    .account-page__inner--left, .account-page__inner--right {
       float: left;
       width: 50%;
     }
