--- a/app/assets/stylesheets/modules/_chat.scss
+++ b/app/assets/stylesheets/modules/_chat.scss
@@ -41,7 +41,7 @@
     background-color: #FAFAFA;
     box-sizing: border-box;
     padding: 46px 40px;
-    height: calc(100% - 190px);
+    height: calc(100vh - 190px);
     overflow: scroll;
     .message {
       .upper-message {
