非同期通信
確認、コードレビュー

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -11,4 +11,4 @@
 @import "modules/chat";
 @import "modules/side_bar";
 @import "messages/messages.scss";
-@import "./group";
+@import "modules/group";
