--- a/app/views/groups/_form.html.haml
+++ b/app/views/groups/_form.html.haml
@@ -24,7 +24,7 @@
       .chat-group-users.js-add-user
         -@group.users.each do|user|
           .chat-group-user.clearfix.js-chat-member{id:user.id}
-            = f.hidden_field :group[user_ids][], value: "user.id"
+            %input{name:'group[user_ids][]',type:'hidden',value:user.id}
             %p.chat-group-user__name
               =user.name
             .user-search-remove.chat-group-user__btn.chat-group-user__btn--remove.js-remove-btn
